--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -9,7 +9,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 50px;
+    gap: 25px;
 }
 
 /* li 전체 높이 고정 + 가운데 정렬 */
@@ -90,5 +90,33 @@
 }
 
 .navbar ul li a.post-button:hover {
+    opacity: 0.9;
+}
+
+.logout-button {
+    background-color: #5271FF;
+    color: #ffffff !important;
+    border-radius: 20px;
+    padding: 8px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.mypage-button {
+    background-color: #5271FF;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 8px 15px; /* Adjust padding as needed */
+    font-size: 16px; /* Match other text */
+    cursor: pointer;
+    height: 50px; /* Match li height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.mypage-button:hover {
     opacity: 0.9;
 }
